--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -34,7 +34,9 @@
      <ul class="navbar-nav">
       <li class="nav-item" *ngIf="isAuthorized()">
         <a class="nav-link"  routerLink="/profile">
-        	<div class="nav-icon-head nav-icon"></div>
+          <img [src]="imageUrl" class="user-avatar" alt="avatar" *ngIf="imageUrl">
+          <span *ngIf="imageUrl" class="username">{{ username }}</span>
+        	<div class="nav-icon-head nav-icon" *ngIf="!imageUrl"></div>
         </a>
       </li>
       <li class="nav-item">
