--- a/src/app/navbar/navbar.component.scss
+++ b/src/app/navbar/navbar.component.scss
@@ -14,33 +14,56 @@ nav {
     height: 40px;
     width: 140px;
   }
-  a.nav-link {
-    cursor: pointer;
-  }
-  .nav-icon-head {
-    background-image: url('../../assets/MenuIcons/head.png');
-  }
-  .nav-icon-heart {
-    background-image: url('../../assets/MenuIcons/heart.png');
-  }
-  .nav-icon-settings {
-    background-image: url('../../assets/MenuIcons/settings.png');
-  }
-  .nav-icon-cart {
-    background-image: url('../../assets/MenuIcons/cart.png');
-  }
-  .nav-icon {
-    background-size: 100%;
-    background-repeat: no-repeat;
-    background-position: center center;
-    width: 25px;
-    height: 25px;
+  ul {
+    display: flex;
+    align-items: center;
+    a.nav-link {
+      cursor: pointer;
+      .user-avatar {
+        width: 40px;
+        height: 40px;
+        overflow: hidden;
+        border-radius: 50%;
+        object-fit: cover;
+        margin-right: 10px;
+      }
+      .username {
+        display: inline-block;
+        white-space: nowrap;
+        text-overflow: ellipsis;
+        overflow: hidden;
+        font-size: 18px;
+        height: 100%;
+        vertical-align: middle;
+        max-width: 100px;
+      }
+      .nav-icon-head {
+        background-image: url('../../assets/MenuIcons/head.png');
+      }
+      .nav-icon-heart {
+        background-image: url('../../assets/MenuIcons/heart.png');
+      }
+      .nav-icon-settings {
+        background-image: url('../../assets/MenuIcons/settings.png');
+      }
+      .nav-icon-cart {
+        background-image: url('../../assets/MenuIcons/cart.png');
+      }
+      .nav-icon {
+        background-size: 100%;
+        background-repeat: no-repeat;
+        background-position: center center;
+        width: 25px;
+        height: 25px;
+      }
+    }
   }
 }
 
 @media screen and (max-width:992px){
   nav{
     ul.navbar-nav {
+      align-items: flex-start;
       padding-left: 20px;
       li.nav-item {
         a.nav-link {
