--- a/src/app/users/users-list/user/user.component.scss
+++ b/src/app/users/users-list/user/user.component.scss
@@ -1,5 +1,13 @@
 td {
   border: 1px solid black;
+  cursor: pointer;
+  .avatar {
+    width: 40px;
+    height: 40px;
+    overflow: hidden;
+    border-radius: 50%;
+    object-fit: cover;
+  }
   button.action {
     border: none;
     background: transparent;
@@ -7,6 +15,7 @@ td {
     color: dodgerblue;
   }
   select {
+    cursor: pointer;
     max-width: 150px;
     width: 100%;
     padding: 5px 15px 5px 5px;
