--- a/src/app/users/users-list/users-list.component.html
+++ b/src/app/users/users-list/users-list.component.html
@@ -4,7 +4,9 @@
   </nav>
   <table style="width:100%">
   <tr>
+    <th>Photo</th>
     <th>User</th>
+    <th>New Password</th>
     <th>User Role</th>
     <th>Save changes</th>
     <th>Delete user</th>
@@ -12,7 +14,9 @@
   <tr *ngIf="errorMsg; else usersList">
     <td colspan="4" class="td-error">{{ errorMsg }}</td>
   </tr>
-  <tr app-user *ngFor="let user of users" [user]="user" [roles]="roles" #usersList></tr>
+  <ng-container *ngIf="users">
+    <tr app-user *ngFor="let user of users" [user]="user" [roles]="roles" #usersList></tr>
+  </ng-container>
 </table>
 </div>
 
