--- a/src/app/users/users-list/users-list.components.scss
+++ b/src/app/users/users-list/users-list.components.scss
@@ -4,6 +4,7 @@
   min-height: 400px;
   background-color: white;
   border: 2px solid black;
+  margin-bottom: 25px;
   .navbar-user{
     border-bottom: 1px solid black;
     padding: 0 20px;
@@ -23,6 +24,9 @@
   }
   table {
     text-align: center;
+    display: block;
+    overflow-x: auto;
+      min-width: 800px;
     tr {
       height: 50px;
       &:nth-child(1) {
