--- a/src/app/users/users.component.html
+++ b/src/app/users/users.component.html
@@ -1,3 +1,3 @@
 <app-navbar></app-navbar>
 <app-users-list></app-users-list>
-<app-user-update></app-user-update>
+<app-user-update *ngIf="selectedUser" [user]="selectedUser"></app-user-update>
