--- a/src/app/users/users-list/user/user.component.scss
+++ b/src/app/users/users-list/user/user.component.scss
@@ -1,6 +1,7 @@
 td {
   border: 1px solid black;
   cursor: pointer;
+  padding: 5px;
   .avatar {
     width: 40px;
     height: 40px;
@@ -14,20 +15,33 @@ td {
     cursor: pointer;
     color: dodgerblue;
   }
+  input {
+    border: 1px solid grey;
+    border-radius: 5px;
+    width: 100%;
+    min-width: 150px;
+    height: 30px;
+    padding: 0 7px;
+    &:focus {
+      outline: none;
+      border: 2px solid rgb(77, 144, 254);
+      border-radius: 5px;
+    }
+  }
   select {
     cursor: pointer;
     max-width: 150px;
     width: 100%;
-    padding: 5px 15px 5px 5px;
+    min-width: 70px;
+    padding: 5px 20px 5px 5px;
     font-size: 16px;
+    line-height:1;
     border: 1px solid #ccc;
-    height: 34px;
+    height: 30px;
     border-radius: 5px;
     outline-radius: 5px;
-    -webkit-appearance: none;
-    -moz-appearance: none;
     appearance: none;
-    background: url(../../../../assets/arrow.png) 96% / 8% no-repeat #eee;
+    background: url(../../../../assets/arrow.png) 96% / 10px no-repeat #eee;
     &:focus {
       outline: none;
       border: 1px solid rgb(77, 144, 254);
