--- a/src/app/users/users-list/users-list.component.html
+++ b/src/app/users/users-list/users-list.component.html
@@ -12,10 +12,10 @@
     <th>Delete user</th>
   </tr>
   <tr *ngIf="errorMsg; else usersList">
-    <td colspan="4" class="td-error">{{ errorMsg }}</td>
+    <td colspan="6" class="td-error">{{ errorMsg }}</td>
   </tr>
   <ng-container *ngIf="users">
-    <tr app-user *ngFor="let user of users" [user]="user" [roles]="roles" #usersList></tr>
+    <tr app-user *ngFor="let user of users" [user]="user" [roles]="roles" #usersList (deletedUser)="onClearUsers($event)"></tr>
   </ng-container>
 </table>
 </div>
