--- a/src/app/users/users-list/users-list.components.scss
+++ b/src/app/users/users-list/users-list.components.scss
@@ -1,10 +1,10 @@
 .table-wrapper {
   margin-top: 70px;
   width: 100%;
-  min-height: 400px;
+  min-height: 50px;
   background-color: white;
   border: 2px solid black;
-  margin-bottom: 25px;
+   margin-bottom: 25px;
   .navbar-user{
     border-bottom: 1px solid black;
     padding: 0 20px;
@@ -24,9 +24,9 @@
   }
   table {
     text-align: center;
-    display: block;
+    display: table;
     overflow-x: auto;
-      min-width: 800px;
+    width: 100%;
     tr {
       height: 50px;
       &:nth-child(1) {
@@ -52,4 +52,13 @@
     }
   }
 }
+@media screen and (max-width:768px){
+  .table-wrapper {
+    table {
+      display: block;
+    }
+  }
+}
+
+
 
