--- a/src/app/profile/profile.component.scss
+++ b/src/app/profile/profile.component.scss
@@ -8,8 +8,9 @@
   flex-wrap: wrap;
   padding: 30px;
   .error {
-    font-size: 16px;
+    font-size: 14px;
     color: red;
+    margin-top: 15px;
   }
   .photo {
     width: 50%;
