--- a/src/app/users/users-list/users-list.component.html
+++ b/src/app/users/users-list/users-list.component.html
@@ -1,6 +1,8 @@
 <div class="table-wrapper">
   <nav class="navbar-user">
-    <button *ngIf="!errorMsg">+CREATE</button>
+    <button *ngIf="myRole == 'Admin'" (click)="onCreateUser()">+CREATE</button>
+    <img [src]="myAvatarUrl" alt="" class="my-avatar">
+    <span class="my-role">{{ myRole }}</span>
   </nav>
   <table style="width:100%">
   <tr>
