--- a/src/app/users/users-list/users-list.component.html
+++ b/src/app/users/users-list/users-list.component.html
@@ -1,3 +1,4 @@
+<app-navbar></app-navbar>
 <div class="table-wrapper">
   <nav class="navbar-user">
     <button *ngIf="myRole == 'Admin'" (click)="onCreateUser()">+CREATE</button>
