--- a/src/app/users/users-list/user/user.component.scss
+++ b/src/app/users/users-list/user/user.component.scss
@@ -32,6 +32,9 @@ td {
       color: #5942f4;
     }
   }
+  button[disabled] {
+    cursor: not-allowed;
+  }
   input {
     border: 1px solid grey;
     border-radius: 5px;
