--- a/src/app/landing/landing.component.scss
+++ b/src/app/landing/landing.component.scss
@@ -39,11 +39,29 @@
 body{
   background-color: red;
 }
+.separator {
+  background-image: url('../../assets/newAssets/picture-arrow-down.png');
+  background-repeat: no-repeat;
+  background-size: 100% 100%;
+  height: 40px;
+  width: 110px;
+  margin: 20px auto;
+  transition: opacity .5s ease-in-out;
+  cursor: pointer;
+  &.inactive {
+   opacity: 0;
+  }
+  &.active {
+   opacity: 1;
+  }
+}
 .row {
-  margin-top: 70px;
   &:last-child {
     margin-bottom: 30px;
   }
+}
+.first-row {
+  margin-top: 70px;
 }
 .section-title {
   font-family: 'goudy_old_style_small_caps_Rg';
