--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -15,8 +15,8 @@
 
   <div class="collapse navbar-collapse" [collapse]="isCollapsed" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
-      <li class="nav-item active">
-        <a class="nav-link" href="#">BLOG<span class="sr-only">(current)</span></a>
+      <li class="nav-item">
+        <a class="nav-link" routerLink="/blog">BLOG</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" routerLink="/users" *ngIf="isAuthorized()">USERS</a>
