Implement scroll to the top of the page and each section, fix routers for blog.

--- a/src/app/blog/blog.component.html
+++ b/src/app/blog/blog.component.html
@@ -6,8 +6,12 @@
       <ul>
         <li>SHOP</li>
         <li>LEARN</li>
-        <li  [routerLink]="['posts']">DISCOVER</li>
-        <li [routerLink]="['create-post']">CREATE POST</li>
+        <li [routerLink]="['./']" routerLinkActive="active-link" [routerLinkActiveOptions]="{exact: true}">
+          <span>DISCOVER</span>
+        </li>
+        <li [routerLink]="['create-post']" routerLinkActive="active-link">
+          <span>CREATE POST</span>
+        </li>
       </ul>
     </nav>
   </header>
