Fix update user information after register

--- a/src/app/blog/blog.component.html
+++ b/src/app/blog/blog.component.html
@@ -15,7 +15,7 @@
       </ul>
     </nav>
   </header>
-  <div class="posts-container">
+  <div class="blog-container">
     <span class="top-right-corner corner"></span>
     <span class="top-left-corner corner"></span>
     <span class="bottom-right-corner corner"></span>
