--- a/src/app/blog/blog.component.scss
+++ b/src/app/blog/blog.component.scss
@@ -87,14 +87,15 @@
       }
     }
   }
-  .posts-container {
-    height: 1000px;
-    border-top: 20px solid black;
-    border-bottom: 20px solid black;
+  .blog-container {
+    min-height: 400px;
+    border-top: 15px solid black;
+    border-bottom: 15px solid black;
     border-right: 2px solid black;
     border-left: 2px solid black;
     margin-bottom: 30px;
     position: relative;
+    padding: 50px;
     .corner {
       position: absolute;
       width: 195px;
