--- a/src/app/blog/create-post/create-post.component.html
+++ b/src/app/blog/create-post/create-post.component.html
@@ -1,1 +1,31 @@
-<quill-editor [modules]="{toolbar: optToolbar}"></quill-editor>
+<form (ngSubmit)="onCreatePost(createPostForm)" #createPostForm="ngForm">
+	<div class="form-group">
+	  <label for="title">
+	  	<strong>Title of your post</strong>
+	  </label>
+	  <input
+	    type="text"
+	    class="form-control"
+	    name="title"
+	    id="title"
+	    ngModel>
+	</div>
+	<div class="form-group">
+		<strong class="text">Text of your post</strong>
+		<quill-editor name="editor" [modules]="{toolbar: optToolbar}" [(ngModel)]="text"></quill-editor>
+	</div>
+	<div class="form-group">
+		<strong class="text">Image of your post</strong>
+		<div class="image-wrapper">
+		    <input type="file"
+		           name="file"
+		           id="file"
+		           class="inputfile"
+		           (change)="onFileChanged($event)">
+		    <label for="file">Choose an image</label>
+		    <img [src]="url" class="image" *ngIf="url">
+	  	</div>
+	</div>
+	<button type="submit" class="btn btn-primary">Create</button>
+</form>
+
