--- a/src/app/blog/create-post/create-post.component.scss
+++ b/src/app/blog/create-post/create-post.component.scss
@@ -1,4 +1,62 @@
+form {
+	max-width: 800px;
+	margin: 0 auto;
+	width: 60%;
+	.form-control:focus {
+    box-shadow: 0 0 0 1px rgba(0,123,255,.25);
+  }
+  .text {
+  	margin-bottom: 7px;
+  	display: inline-block;
+  }
+  .image-wrapper {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-start;
+    .image {
+      width: 80%;
+      max-width: 300px;
+      min-width: 150px;
+      height: auto;
+      max-height: 350px;
+      object-fit: contain;
+      background-color: #eee;
+      text-align: left;
+      margin-top: 10px;
+    }
+    .inputfile {
+      width: 0.1px;
+      height: 0.1px;
+      opacity: 0;
+      overflow: hidden;
+      position: absolute;
+      z-index: -1;
+    }
+    .inputfile + label {
+      font-size: 16px;
+      color: white;
+      background-color: grey;
+      display: inline-block;
+      cursor: pointer;
+      padding: 3px 10px;
+      border-radius: 5px;
+      transition: all .2s ease;
+      display: flex;
+      flex-wrap: wrap;
+    }
+    .inputfile:focus + label,
+    .inputfile + label:hover {
+      background-color: rgb(77, 144, 254);
+      box-shadow: 0 0 3px 2px rgba(0, 0, 0, .7);
+    }
+  }
+}
 /deep/ .ql-toolbar, /deep/ .ql-container {
-  width: 70%;
+  width: 100%;
   margin: 0 auto;
+}
+/deep/ .ql-container {
+	min-height: 150px;
+	font-size: 18px;
 }
