--- a/src/app/navbar/navbar.component.scss
+++ b/src/app/navbar/navbar.component.scss
@@ -19,6 +19,11 @@ nav {
     align-items: center;
     a.nav-link {
       cursor: pointer;
+      &.nav-link-profile {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+      }
       .user-avatar {
         width: 40px;
         height: 40px;
