--- a/src/app/blog/blog.component.scss
+++ b/src/app/blog/blog.component.scss
@@ -89,6 +89,7 @@
   }
   .blog-container {
     min-height: 400px;
+    height: auto;
     border-top: 15px solid black;
     border-bottom: 15px solid black;
     border-right: 2px solid black;
