--- a/src/app/blog/posts/posts.component.html
+++ b/src/app/blog/posts/posts.component.html
@@ -1,1 +1,6 @@
-<p>Posts work</p>
+<!--<app-post *ngFor="let post of posts" [post]="post"></app-post>-->
+
+<ngx-masonry class="masonry-container" *ngIf="posts">
+  <app-post *ngFor="let post of posts" [post]="post"></app-post>
+</ngx-masonry>
+
