Fix masonry and add imagesLoaded plugin

--- a/src/app/blog/blog.component.scss
+++ b/src/app/blog/blog.component.scss
@@ -102,6 +102,7 @@
       height: 185px;
       background-size: contain;
       background-repeat: no-repeat;
+      z-index: 10;
     }
     .bottom-left-corner {
       background-image: url('/assets/land-bor-b-l.png');
