--- a/src/app/blog/posts/posts.component.html
+++ b/src/app/blog/posts/posts.component.html
@@ -1,7 +1,8 @@
-<!--<app-post *ngFor="let post of posts" [post]="post"></app-post>-->
 <div *ngIf="posts">
-  <ngx-masonry class="masonry-container">
-    <app-post *ngFor="let post of posts" [post]="post"></app-post>
+  <ngx-masonry class="masonry-container" [useImagesLoaded]="true">
+    <ngxMasonryItem *ngFor="let post of posts" >
+      <app-post [post]="post"></app-post>
+    </ngxMasonryItem>
   </ngx-masonry>
 </div>
 
